# bankai-sdk

./: .gitignore  AGENTS.md  Cargo.toml  README.md  beacon.rs  build-docs.sh  mmr_new.rs
.github/workflows/: ci.yml  compat-live.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  merkle.rs  mmr.rs  utils.rs
crates/core/src/evm/: execution.rs  mod.rs  op_stack.rs  proof.rs
crates/mpt-generate/: Cargo.toml
crates/mpt-generate/src/: lib.rs
crates/mpt-generate/src/evm/: execution.rs  op_stack.rs  proof.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: api_client.rs  debug.rs  errors.rs  lib.rs  main.rs
crates/sdk/src/fetch/: batch.rs  mod.rs  requests.rs
crates/sdk/src/fetch/api/: blocks.rs  chains.rs  explorer.rs  health.rs  mod.rs  op_stack.rs  stats.rs
crates/sdk/src/fetch/api/ethereum/: beacon.rs  execution.rs  mod.rs
crates/sdk/src/fetch/bankai/: mmr.rs  stwo.rs
crates/sdk/src/fetch/batch/: ethereum.rs  mod.rs  op_stack.rs
crates/sdk/src/fetch/clients/: bankai_api.rs  beacon_client.rs  execution_client.rs  mod.rs  op_stack_client.rs
crates/sdk/src/fetch/ethereum/: beacon.rs  execution.rs  mod.rs
crates/sdk/src/fetch/evm/: beacon.rs  execution.rs  mod.rs  op_stack.rs
crates/sdk/src/verify/: batch.rs  mmr.rs  mod.rs  stwo.rs
crates/sdk/src/verify/bankai/: mmr.rs  mod.rs  stwo.rs
crates/sdk/src/verify/evm/: beacon.rs  execution.rs  mod.rs
crates/sdk/tests/: compat_live.rs
crates/sdk/tests/compat/: README.md  assertions.rs  case.rs  context.rs  mod.rs  openapi_minimal.rs  runner.rs
crates/sdk/tests/compat/api/: blocks.rs  chains.rs  health.rs  mod.rs  op_stack.rs  stats.rs
crates/sdk/tests/compat/api/ethereum/: beacon.rs  execution.rs  mod.rs  root.rs
crates/sdk/tests/compat/runner/: debug.rs  decode.rs  mod.rs  verify.rs
crates/types/: Cargo.toml
crates/types/src/: block.rs  common.rs  lib.rs  proofs.rs
crates/types/src/api/: blocks.rs  chains.rs  error.rs  ethereum.rs  explorer.rs  mod.rs  op_stack.rs  proofs.rs  stats.rs
crates/types/src/fetch/: mod.rs
crates/types/src/fetch/evm/: beacon.rs  execution.rs  mod.rs
crates/types/src/inputs/: mod.rs  op_stack.rs
crates/types/src/inputs/evm/: beacon.rs  execution.rs  header_serde.rs  mod.rs  op_stack.rs
crates/types/src/results/: mod.rs  op_stack.rs
crates/types/src/results/evm/: beacon.rs  execution.rs  mod.rs  op_stack.rs
crates/types/src/utils/: mmr.rs  mod.rs
crates/types/src/verify/: mod.rs
crates/types/src/verify/evm/: beacon.rs  execution.rs  mod.rs
crates/verify/: Cargo.toml
crates/verify/src/: batch.rs  lib.rs  op_stack.rs
crates/verify/src/bankai/: mmr.rs  mmr_new.rs  mod.rs  stwo.rs
crates/verify/src/evm/: beacon.rs  execution.rs  op_stack.rs
docs/: api-client.md  concepts-bankai-blocks.md  concepts-ethereum-light-clients.md  concepts-op-stack.md  core-flow.md  getting-started.md  op-stack.md  proof-bundles.md  supported-surfaces.md  verify.md
example/basic-api/: README.md
example/basic-bundle/: README.md
example/verified-rpc/: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
example/verified-rpc/src/: lib.rs  main.rs
example/worldid-replicator/: README.md
example/worldid-root/: Cargo.toml  README.md
example/worldid-root/src/: main.rs
scripts/: check-trie-roots.sh  run-compat-tests.sh
