[workspace]
resolver = "3"
members = [
    "crates/types",
    "crates/sdk",
]

[workspace.dependencies]
alloy-primitives = { version = "1.3.1", features = ["serde"] }
alloy-provider = { version = "1.0.29" }
alloy-rpc-types = { version = "1.0.29" }
alloy-rpc-types-beacon = { version = "1.0.29" }
alloy-trie = "0.9.1"

url = { version = "2.4.0" }
serde = { version = "1.0.219" }
serde_json = { version = "1.0.143" }
utoipa = { version = "5.4", features = ["macros"] }
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
dotenv = { version = "0.15" }
tree_hash = { version = "0.10.0" }
tree_hash_derive = { version = "0.10.0" }



cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "89ca0d2787166d9d166e5074bd1bb30825b372e2"}
stwo-cairo-serialize = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "89ca0d2787166d9d166e5074bd1bb30825b372e2" }

stwo = { git = "https://github.com/starkware-libs/stwo", rev = "d9176e6e22319370a8501f799829b920c0db2eac", features = [
    "parallel",
    "prover",
], default-features = false }
accumulators = {git = "https://github.com/bankaixyz/mmr-accumulator", features = ["mmr", "memory", "keccak", "poseidon"] }
starknet-crypto = { version = "0.8.0" }