[workspace]
resolver = "3"
members = [
    "crates/types",
    "crates/sdk",
    "crates/verify",
    "example/worldid-root",
    "example/verified-rpc",
]

[workspace.dependencies]
alloy-primitives = { version = "1.3.1", default-features = false }
alloy-consensus = { version = "1.0.29", default-features = false }
alloy-provider = { version = "1.0.29", default-features = false }
alloy-rpc-types-eth = { version = "1.0.29", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-rpc-types-beacon = { version = "1.0.29", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }
alloy-rlp = { version = "0.3.12", default-features = false }

eth-trie-proofs = { git = "https://github.com/HerodotusDev/trie-proofs", package = "eth-trie-proofs", rev = "e7aac1a" }
url = { version = "2.4.0" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.143" }
utoipa = { version = "5.4", features = ["macros"] }
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
thiserror = { version = "1.0.61", default-features = false }
anyhow = "1.0.86"
dotenv = { version = "0.15" }
tree_hash = { version = "0.11.0", default-features = false }
tree_hash_derive = { version = "0.11.0", default-features = false }
stwo-cairo-serialize = { git = "https://github.com/bankaixyz/stwo-cairo", rev = "e2d4a10bcd1613a185cabdd0d340992c969cf639" }

cairo-air = { git = "https://github.com/bankaixyz/stwo-cairo", rev = "e2d4a10bcd1613a185cabdd0d340992c969cf639", default-features = false }
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "d9176e6e22319370a8501f799829b920c0db2eac", features = [
    "parallel",
    "prover",
], default-features = false }
starknet-crypto = { version = "0.8.0", default-features = false }
accumulators = { git = "https://github.com/bankaixyz/mmr-accumulator", rev = "5b12fa8" }


ethereum_hashing = { git = "https://github.com/bankaixyz/ethereum_hashing", rev = "c457c3e927cc146d7bc91e944cf6d9c55b05d45e", default-features = false, features = ["portable"] }
[patch.crates-io]
ethereum_hashing = { git = "https://github.com/bankaixyz/ethereum_hashing", rev = "c457c3e927cc146d7bc91e944cf6d9c55b05d45e" }
