[package]
name = "bankai-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
bankai-types = { path = "../types" }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
cairo-air.workspace = true
stwo.workspace = true
accumulators.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
url.workspace = true
