[package]
name = "bankai-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
bankai-types = { path = "../types", features = ["api", "verifier-types"] }
bankai-verify = { path = "../verify" }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
cairo-air.workspace = true
stwo.workspace = true
accumulators.workspace = true
url.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-beacon.workspace = true
alloy-trie = { workspace = true, features = ["ethereum"] }
alloy-rlp.workspace = true
dotenv.workspace = true
tree_hash.workspace = true
ethereum_hashing = { workspace = true, features = ["portable"] }
stwo-cairo-serialize.workspace = true
starknet-ff = "0.3.7"
eth-trie-proofs.workspace = true
