[package]
name = "bankai-types"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies (always available)
alloy-primitives = { workspace = true, default-features = false }
alloy-consensus = { workspace = true, default-features = false }
cairo-air = { workspace = true, default-features = false }
stwo = { workspace = true, default-features = false }
starknet-crypto = { workspace = true, default-features = false }
tree_hash = { workspace = true, default-features = false }
tree_hash_derive = { workspace = true, default-features = false }
ethereum_hashing = { workspace = true, default-features = false, features = ["portable"] }

# Optional dependencies for API/services
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

alloy-rpc-types-eth = { workspace = true, default-features = false, optional = true }
alloy-rpc-types-beacon = { workspace = true, default-features = false, optional = true }

[features]
default = ["std"]

# Standard library support
std = [
    "alloy-primitives/std",
    "alloy-consensus/std",
    "starknet-crypto/std",
]

# API types (requires std)
api = ["std", "serde", "serde_json", "utoipa"]

# Verifier types for proof handling
verifier-types = ["serde", "alloy-rpc-types-eth", "alloy-rpc-types-beacon"]