[package]
name = "bankai-types"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies (always available)
alloy-primitives = { workspace = true, default-features = false }
alloy-consensus = { workspace = true, default-features = false, features = ["serde","serde-bincode-compat"] }
cairo-air = { workspace = true, default-features = false, optional = true }
stwo = { workspace = true, default-features = false, optional = true }
starknet-crypto = { workspace = true, default-features = false }
tree_hash = { workspace = true, default-features = false }
tree_hash_derive = { workspace = true, default-features = false }
ethereum_hashing = { workspace = true, default-features = false, features = ["portable"] }

# Optional dependencies for API/services
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true, features = ["preserve_order"] }
utoipa = { workspace = true, optional = true }

alloy-rpc-types-eth = { workspace = true, default-features = false, optional = true, features = ["serde","serde-bincode-compat"] }
alloy-rpc-types-beacon = { workspace = true, default-features = false, optional = true }

[features]
default = ["std", "inputs", "results"]

# Standard library support
std = [
    "alloy-primitives/std",
    "alloy-consensus/std",
    "starknet-crypto/std",
]

# API types (requires std)
api = ["std", "serde", "serde_json", "utoipa", "dep:cairo-air", "dep:stwo"]

# Typed proof inputs assembled by the SDK
inputs = [
    "serde",
    "serde_json",
    "dep:cairo-air",
    "dep:stwo",
    "dep:alloy-rpc-types-eth",
    "dep:alloy-rpc-types-beacon",
]

# Verified outputs returned by the verifier
results = []
