[package]
name = "bankai-verify"
version = "0.1.0"
edition = "2021"

[dependencies]
bankai-types = { path = "../types", default-features = false, features = ["verifier-types"] }
accumulators = { workspace = true, default-features = false, features = ["mmr", "memory", "keccak", "poseidon"] }
cairo-air = { workspace = true, default-features = false }
stwo = { workspace = true, default-features = false }
alloy-rlp = { workspace = true, default-features = false }
alloy-primitives = { workspace = true, default-features = false, features = ["rlp"] }
alloy-trie = { workspace = true, default-features = false }
tree_hash = { workspace = true, default-features = false }

[features]
default = ["std"]
std = []