[package]
name = "bankai-verify"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["bankai-types/std"]

[dependencies]
bankai-core = { path = "../core" }
bankai-types = { path = "../types", default-features = false, features = ["inputs", "results"] }
cairo-air = { workspace = true, default-features = false }
stwo = { workspace = true, default-features = false }
alloy-rlp = { workspace = true, default-features = false }
alloy-primitives = { workspace = true, default-features = false, features = ["rlp"] }
alloy-trie = { workspace = true, default-features = false }
tree_hash = { workspace = true, default-features = false }
ethereum_hashing = { workspace = true, default-features = false, features = ["portable"] }
starknet-crypto = { workspace = true, default-features = false }

[dev-dependencies]
mmr.workspace = true
tokio.workspace = true
alloy-consensus.workspace = true
alloy-rpc-types-eth.workspace = true
url.workspace = true
